# TithingVideoMaker

./: .gitignore  README.md  build_exe.ps1  launch_ui.bat  launch_ui.py  main.py  pyproject.toml
tests/: test_encoding.py
tithing_video_maker/: app.py  constants.py  encoding.py  graphics.py  models.py  paths.py  qr.py  renderer.py  settings.py  ui.py  video.py
