[project]
name = "tithingvideomaker"
version = "0.1.0"
description = "CLI video maker for monthly tithing progress videos."
requires-python = ">=3.10"
dependencies = [
    "moviepy>=1.0.3,<3.0.0",
    "numpy>=1.24,<3.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "pymupdf (>=1.25.0,<2.0.0)",
]

[project.scripts]
tithing-video-maker = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
